# tax_assistant

./: .dockerignore  .gitignore  Dockerfile  PCC-3(6)_v_12K.xml  docker-compose.yml  nginx.conf  pyproject.toml  test.xml  voi.sh
tax_assistant/: documents.py  generated.py  main.py  test_documents.py  xml_gen.py
tax_assistant/models/: gen.py  gminy.py  grounding.py  partial_taxform.py  taxform.py  urzadmap.py
tax_assistant/xsd/: __init__.py  schemat.py
tax_assistant/xsd/pkg_2022/pkg_01/pkg_05/e_d/kody_urzedow_skarbowych/: __init__.py  kody_urzedow_skarbowych_v8_0_e.py
tax_assistant/xsd/pkg_2022/pkg_09/pkg_13/e_d/definicje_typy/: __init__.py  struktury_danych_v12_0_e.py
tax_assistant/xsd/pkg_2022/pkg_09/pkg_13/e_d/ordzu/: __init__.py  ord_zu_3_v10_0_e.py
tax_assistant/xsd/pkg_2023/pkg_09/pkg_06/e_d/kody_krajow/: __init__.py  kody_krajow_v13_0_e.py
tax_assistant/xsdpyd/: pyd.py
temp/: blob
